--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,6 +4,8 @@ definitions:
     triggering:
       events:
         - push
+        - pull_request
+        - tag
     when:
       changeset:
         excludes:
